[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deci-doc"
version = "1.0.0"
description = "Create, track, and search Architecture Decision Records (ADRs) and RFCs in your repo"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "deci-doc contributors"}]
keywords = ["adr", "architecture", "decision-records", "rfc", "documentation", "engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Software Development",
]
dependencies = [
    "click>=8.0",
]

[project.scripts]
deci-doc = "deci_doc.cli:cli"

[tool.setuptools.packages.find]
include = ["deci_doc*"]
